# p2ppcb_software

./: .gitignore  LICENSE  README.md
p2ppcb_component_reference/: ReadMe.md
p2ppcb_component_reference/alice/: alice-BOM.csv
p2ppcb_component_reference/bob/: bob-BOM.csv
p2ppcb_component_reference/charlotte/: charlotte-BOM.csv
p2ppcb_component_reference/contact-to-socket/: Single IDC Contact Push Mount.f3d
p2ppcb_composer_f360/: Alice.f3d  Bob.f3d  Changelog.md  Charlotte.f3d  Foot.f3d  P2PPCB Composer F360.manifest  P2PPCB Composer F360.py  P2PPCB Composer.manifest  P2PPCB Composer.py  ReadMe.md  appearance.f3d  f360_common.py  reimport.py  requirements.txt
p2ppcb_composer_f360/composer_test/: Test P2PPCB Composer.manifest  Test P2PPCB Composer.py  test_base.py  test_cmd.py  test_utility.py
p2ppcb_composer_f360/f3d/: Azoteq Qwiic-to-FFC.f3d  Azoteq TPS43.f3d  Azoteq TPS65.f3d  Bob.f3d  Cirque Qwiic-to-FFC.f3d  Cirque TM035035.f3d  Cover Adjust Boss Reverse.f3d  Cover Adjust Boss.f3d  Cover Bottom Boss.f3d  TRRS Terminal.f3d
p2ppcb_composer_f360/mainboard/: Alice.py  Bob.py  Charlotte.py  __init__.py
p2ppcb_composer_f360/p2ppcb_composer/: cmd_change_key.py  cmd_common.py  cmd_edit_frame.py  cmd_info.py  cmd_init_project.py  cmd_key_common.py  cmd_load_kle.py  cmd_matrix_route.py  cmd_move_key.py  cmd_regex_selector.py  cmd_remove_undercut.py  cmd_set_attribute.py  cmd_start_project.py  toolbar.py
p2ppcb_composer_f360/p2ppcb_parts_depot/: depot.py
p2ppcb_composer_f360/regex_selector/: regex_selector.py
p2ppcb_composer_f360/route/: dubins.py  route.py
p2ppcb_composer_f360/scaffold_data/: 60percent.json  alternative.dxf  skeleton.dxf  starter-kit.json
p2ppcb_ntcs/: ReadMe.md  p2ppcb_charlotte_ntcs.uf2  via_keymap.json
p2ppcb_ntcs/left/: kle-left.json
p2ppcb_parts_data_f360/: ReadMe.md
p2ppcb_parts_resolver/: CHANGELOG.md  LICENSE  ReadMe.md  pyproject.toml  setup.cfg
p2ppcb_parts_resolver/p2ppcb_parts_resolver/: __init__.py  resolver.py
p2ppcb_parts_resolver/test_data/kle/: 60percent.json  60percent.pkl  dsa_set.json  dsa_small.json  dsa_small2.json  dsa_small3.json  dsa_space.json  ergodox.json  ergodox.pkl  iso105.pkl  oem_set.json  oem_small.json  oem_small2.json  rotation.json  rotation.pkl  single-bigass.json  single-bigass.pkl  single-rotated-iso.json  single-rotated-iso.pkl  single.json  single.pkl  stepped.json  stepped.pkl
p2ppcb_parts_resolver/tests/: test_parts_resolver.py
p2ppcb_starter_kit_reference/: ReadMe.md
(+271 files in other folders)
