[metadata]
name = p2ppcb_parts_resolver
version = attr: p2ppcb_parts_resolver.__version__
author = Hajime Nakazato
author-email = hajime@kaoriha.org
home-page = https://github.com/hajimen/p2ppcb_software
description = "p2ppcb_parts_resolver is a resolver for deeply complicated parameters for 3D CAD."
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords =
    CAD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/hajimen/p2ppcb_software/issues
    Changelog = https://github.com/hajimen/p2ppcb_software/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.7
packages = p2ppcb_parts_resolver
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    pint
    numpy
    pillow
    kle_scraper
